web-deployment.yaml
# Deployment Config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
  strategy:
    type: RollingUpdate
    maxSurge: 2
    maxUnavailable: 1
    spec:
      containers:
        - name: nginx
          image: jolsoniot/nginx-nr:latest
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
          ports:
            - name: httpport
              containerPort: 80
          livenessProbe:
            httpGet:
              path: "/"
              port: 80
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: "/"
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

# Service Config
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector: 
    app: web-app
  type: ClusterIP  
  ports:
    - name: web-app
      port: 80
      targetPort: 80
