web-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: web-app
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: web-service
              port:
                number: 80
